<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".view.CadastraUsuarioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cadastro_de_usuario"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nomeusuario"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/fone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fone"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/matricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/matricula"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/curso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/curso"
        android:singleLine="true" />

    <CheckBox
        android:id="@+id/ativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ativo" />

    <CheckBox
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/administradora" />

    <Button
        android:id="@+id/btnsalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:onClick="salvarUsuario"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/btnatualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:onClick="atualizarUsuario"
        android:visibility="gone"
        android:text="@string/salvar" />

</LinearLayout>

