<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/linearLayout">


        <TextView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/data"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/pedra"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/agua"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/parado"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/nadando"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textStyle="bold"/>
  </LinearLayout>

    <ListView
        android:layout_width="331dp"
        android:id="@+id/consultalista"
        android:layout_height="356dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

  </LinearLayout>

</RelativeLayout>
